--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 #
 # Copied from: https://github.com/github/gitignore/blob/master/Python.gitignore
+#
+#
+/img/photobooth.jpg
+/img/selfie.jpg
+.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
